--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ PORT = 3000
 DB_URL_LOCAL = mongodb://localhost:27017/hotel
 DB_URL_ONLINE = mongodb+srv://deepakp1999krishnasoftweb:qwerty1234@hotel.m5ddkg5.mongodb.net/
 JWT_TOKEN = 12345
+MYSQL_USER = root
+MYSQL_PASSWORD = mysql@123
